src/js/css/menubar.css
@charset "utf-8";
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * www.tbs.gc.ca/ws-nw/wet-boew/terms / www.sct.gc.ca/ws-nw/wet-boew/conditions
*/
.wet-boew-menubar{
	background-color:#1A3D6C;
	border-bottom:4px solid #999;
	min-height:28px;
}

.mb-menu{
	position:absolute;
	background-color:#1A3D6C;
	width:100%;
	z-index:500;
	float:left;
	padding:4em;
}

.mb-menu,.mb-menu li{
	list-style:none;
	min-height:2.2em;
	margin:0;
	padding:0;
}

.mb-menu li{
	background-color:#1A3D6C;
	border-left:1px solid #353;
	border-right:1px solid #575;
	float:left;
}

.mb-menu li h3{
	font-size:100%;
	margin:0;
	padding:0;
}

.mb-menu a{
	font-weight:700;
	text-align:left;
	white-space:nowrap;
	display:block;
	padding:0.45em 0.79em;
}

.mb-menu a:link,.mb-menu a:visited{
	text-decoration:none;
	color:#fff;
}

.mb-menu a:hover,.mb-menu a:focus,.mb-menu a:active{
	text-decoration:underline;
}

.mb-menu .nav-current{
	background:#242;
	color:#fff;
}

.mb-menu li:first-child.mb-active{
	border-left:1px solid #CCC;
}

.mb-active a:hover.mb-has-sm,.mb-active a:link.mb-has-sm,.mb-active a:visited.mb-has-sm{
	background-color:#CCC;
	color:#000;
}

.mb-menu li div.mb-sm{
	display:none;
	visibility:hidden;
}

.mb-menu .mb-sm-open{
	position:absolute;
	z-index:499;
	background: #ccc !important}

.mb-menu .mb-sm-open a{
	white-space:normal;
}

.mb-menu .mb-sm-open ul{
	list-style-type:none;
}

.mb-menu .mb-sm-open li,.mb-menu .mb-sm-open li div{
	display:block;
	float:none;
	background:none;
	border:none;
	min-height:0;
}

.mb-menu .mb-sm-open li a{
	font-weight:400;
}

.mb-menu .mb-sm-open a,.mb-menu .mb-sm-open a:link,.mb-menu .mb-sm-open a:visited{
	color:#000;
}

.mb-menu .expandicon{
	padding-right:12px;
	background:url("../images/menu-dropdown.gif") no-repeat right center;
}

.mb-mega .mb-sm-open{
	background-color:#CCC;
	border-bottom:4px solid #242;
	padding-top:5px;
	border-radius:0 0 3px 3px;
	-moz-border-radius:0 0 3px 3px;
	-webkit-border-radius:0 0 3px 3px;
}

.mb-mega .mb-sm-open h2,.mb-mega .mb-sm-open h3,.mb-mega .mb-sm-open h4{
	font-size:1.2em;
	font-weight:700;
	margin:0;
}

.mb-mega .mb-sm-open ul{
	margin:0 0 0 1.2em;
	padding:0 0 1em;
}

.mb-mega .mb-sm-open .menu-col{
	float:left;
	min-width:190px;
}

.mb-hsubmenu .mb-sm-open{
	left:0;
	width:100%;
	background:#CCC;
}

.mb-hsubmenu .mb-sm-open a{
	padding:0.15em 0.79em 0.25em;
}

.mb-hsubmenu .mb-sm-open ul{
	width:100%;
	padding-left:0;
	background:#CCC;
	margin:auto;
}

.mb-hsubmenu .mb-sm-open li{
	border-left:1px solid #BBB;
	border-right:1px solid #DDD;
	float:left;
}

.mb-container{
	position:relative;
}

